--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,8 +32,7 @@ jobs:
         run: cargo binstall -y selene stylua taplo-cli typos-cli
 
       - name: Lint Lua (selene)
-        working-directory: lua/tidal
-        run: selene lua after init.lua
+        run: selene lua/ plugin/ ftplugin/ ftdetect/
 
       - name: Check Lua formatting (stylua)
         run: stylua --check config/
